{
  "version": 4,
  "terraform_version": "1.11.3",
  "serial": 204,
  "lineage": "2f9d7043-6004-7574-a529-5983c9b960f0",
  "resources": [
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:733573665725:security-group/sg-049e8350d7dc74dc8",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-049e8350d7dc74dc8",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Node groups to cluster API",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-09f15a7ce8e9e5d72"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "forgejo-eks-cluster-20250410135930361800000002",
            "name_prefix": "forgejo-eks-cluster-",
            "owner_id": "733573665725",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "forgejo-eks-cluster"
            },
            "tags_all": {
              "Name": "forgejo-eks-cluster"
            },
            "timeouts": null,
            "vpc_id": "vpc-050ba97cb322a7a93"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:733573665725:security-group/sg-09f15a7ce8e9e5d72",
            "description": "EKS node shared security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all egress",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09f15a7ce8e9e5d72",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 4443/tcp webhook",
                "from_port": 4443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-049e8350d7dc74dc8"
                ],
                "self": false,
                "to_port": 4443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 6443/tcp webhook",
                "from_port": 6443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-049e8350d7dc74dc8"
                ],
                "self": false,
                "to_port": 6443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 8443/tcp webhook",
                "from_port": 8443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-049e8350d7dc74dc8"
                ],
                "self": false,
                "to_port": 8443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 9443/tcp webhook",
                "from_port": 9443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-049e8350d7dc74dc8"
                ],
                "self": false,
                "to_port": 9443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node groups",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-049e8350d7dc74dc8"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node kubelets",
                "from_port": 10250,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-049e8350d7dc74dc8"
                ],
                "self": false,
                "to_port": 10250
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS UDP",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node ingress on ephemeral ports",
                "from_port": 1025,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 65535
              }
            ],
            "name": "forgejo-eks-node-20250410135930360900000001",
            "name_prefix": "forgejo-eks-node-",
            "owner_id": "733573665725",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "forgejo-eks-node",
              "kubernetes.io/cluster/forgejo-eks": "owned"
            },
            "tags_all": {
              "Name": "forgejo-eks-node",
              "kubernetes.io/cluster/forgejo-eks": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-050ba97cb322a7a93"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-281846762",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-049e8350d7dc74dc8",
            "security_group_rule_id": "sgr-0caed82748d993365",
            "self": false,
            "source_security_group_id": "sg-09f15a7ce8e9e5d72",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress",
            "from_port": 0,
            "id": "sgrule-1703910849",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-09f15a7ce8e9e5d72",
            "security_group_rule_id": "sgr-0ebf4bc398bb13b5b",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-2335269392",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-09f15a7ce8e9e5d72",
            "security_group_rule_id": "sgr-00a88cc48bb304d7d",
            "self": false,
            "source_security_group_id": "sg-049e8350d7dc74dc8",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_4443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 4443/tcp webhook",
            "from_port": 4443,
            "id": "sgrule-3335596744",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-09f15a7ce8e9e5d72",
            "security_group_rule_id": "sgr-0eea0558f529e6909",
            "self": false,
            "source_security_group_id": "sg-049e8350d7dc74dc8",
            "timeouts": null,
            "to_port": 4443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_6443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 6443/tcp webhook",
            "from_port": 6443,
            "id": "sgrule-261311838",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-09f15a7ce8e9e5d72",
            "security_group_rule_id": "sgr-0867fb98953bd1308",
            "self": false,
            "source_security_group_id": "sg-049e8350d7dc74dc8",
            "timeouts": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_8443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 8443/tcp webhook",
            "from_port": 8443,
            "id": "sgrule-483357055",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-09f15a7ce8e9e5d72",
            "security_group_rule_id": "sgr-03ae7b8acca2becd3",
            "self": false,
            "source_security_group_id": "sg-049e8350d7dc74dc8",
            "timeouts": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_9443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 9443/tcp webhook",
            "from_port": 9443,
            "id": "sgrule-2020491956",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-09f15a7ce8e9e5d72",
            "security_group_rule_id": "sgr-0a26f0bb5bbd55fc2",
            "self": false,
            "source_security_group_id": "sg-049e8350d7dc74dc8",
            "timeouts": null,
            "to_port": 9443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-1280390675",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-09f15a7ce8e9e5d72",
            "security_group_rule_id": "sgr-06939f90d2fe1575d",
            "self": false,
            "source_security_group_id": "sg-049e8350d7dc74dc8",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_ephemeral",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node ingress on ephemeral ports",
            "from_port": 1025,
            "id": "sgrule-3693337324",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-09f15a7ce8e9e5d72",
            "security_group_rule_id": "sgr-0d1c06344ada4625f",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-4101908399",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-09f15a7ce8e9e5d72",
            "security_group_rule_id": "sgr-0648d31ec78ed7780",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS UDP",
            "from_port": 53,
            "id": "sgrule-1344373824",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-09f15a7ce8e9e5d72",
            "security_group_rule_id": "sgr-034e3f0bed8964635",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e91e0c1352e16ad7",
            "arn": "arn:aws:ec2:eu-central-1:733573665725:elastic-ip/eipalloc-0e91e0c1352e16ad7",
            "association_id": "eipassoc-07cc22f9d5eda8981",
            "domain": "vpc",
            "id": "eipalloc-0e91e0c1352e16ad7",
            "network_border_group": "eu-central-1",
            "network_interface": "eni-090ff993e53cfe56d",
            "private_dns": "ip-10-0-1-203.eu-central-1.compute.internal",
            "private_ip": "10.0.1.203",
            "public_dns": "ec2-3-78-140-38.eu-central-1.compute.amazonaws.com",
            "public_ip": "3.78.140.38",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "forgejo-nat-eip-1",
              "Owner": "Bohdan"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "forgejo-nat-eip-1",
              "Owner": "Bohdan"
            },
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00993386c8968f9ad",
            "arn": "arn:aws:ec2:eu-central-1:733573665725:elastic-ip/eipalloc-00993386c8968f9ad",
            "association_id": "eipassoc-0f4003f5de54b55d5",
            "domain": "vpc",
            "id": "eipalloc-00993386c8968f9ad",
            "network_border_group": "eu-central-1",
            "network_interface": "eni-0d1df59f292885fce",
            "private_dns": "ip-10-0-2-97.eu-central-1.compute.internal",
            "private_ip": "10.0.2.97",
            "public_dns": "ec2-3-67-128-116.eu-central-1.compute.amazonaws.com",
            "public_ip": "3.67.128.116",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "forgejo-nat-eip-2",
              "Owner": "Bohdan"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "forgejo-nat-eip-2",
              "Owner": "Bohdan"
            },
            "vpc": true
          }
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ed77a1edc52bcb0f",
            "arn": "arn:aws:ec2:eu-central-1:733573665725:elastic-ip/eipalloc-0ed77a1edc52bcb0f",
            "association_id": "eipassoc-075b63139cb42bc76",
            "domain": "vpc",
            "id": "eipalloc-0ed77a1edc52bcb0f",
            "network_border_group": "eu-central-1",
            "network_interface": "eni-0239391a55b5b995c",
            "private_dns": "ip-10-0-3-83.eu-central-1.compute.internal",
            "private_ip": "10.0.3.83",
            "public_dns": "ec2-3-71-243-229.eu-central-1.compute.amazonaws.com",
            "public_ip": "3.71.243.229",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "forgejo-nat-eip-3",
              "Owner": "Bohdan"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "forgejo-nat-eip-3",
              "Owner": "Bohdan"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:733573665725:internet-gateway/igw-0854a738f97328761",
            "id": "igw-0854a738f97328761",
            "owner_id": "733573665725",
            "tags": {
              "Environment": "dev",
              "Name": "forgejo-igw",
              "Owner": "Bohdan"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "forgejo-igw",
              "Owner": "Bohdan"
            },
            "vpc_id": "vpc-050ba97cb322a7a93"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e91e0c1352e16ad7",
            "association_id": "eipassoc-07cc22f9d5eda8981",
            "connectivity_type": "public",
            "id": "nat-019a5066321b9dba8",
            "network_interface_id": "eni-090ff993e53cfe56d",
            "private_ip": "10.0.1.203",
            "public_ip": "3.78.140.38",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-00a51bf50c2d8209c",
            "tags": {
              "Environment": "dev",
              "Name": "forgejo-nat-1",
              "Owner": "Bohdan"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "forgejo-nat-1",
              "Owner": "Bohdan"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00993386c8968f9ad",
            "association_id": "eipassoc-0f4003f5de54b55d5",
            "connectivity_type": "public",
            "id": "nat-0bf5717224ce7042a",
            "network_interface_id": "eni-0d1df59f292885fce",
            "private_ip": "10.0.2.97",
            "public_ip": "3.67.128.116",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0268efab20cead0b4",
            "tags": {
              "Environment": "dev",
              "Name": "forgejo-nat-2",
              "Owner": "Bohdan"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "forgejo-nat-2",
              "Owner": "Bohdan"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ed77a1edc52bcb0f",
            "association_id": "eipassoc-075b63139cb42bc76",
            "connectivity_type": "public",
            "id": "nat-0d2255728cfe15ff8",
            "network_interface_id": "eni-0239391a55b5b995c",
            "private_ip": "10.0.3.83",
            "public_ip": "3.71.243.229",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-02370a736fbb592d6",
            "tags": {
              "Environment": "dev",
              "Name": "forgejo-nat-3",
              "Owner": "Bohdan"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "forgejo-nat-3",
              "Owner": "Bohdan"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:733573665725:route-table/rtb-09ea63c2ba2d0f9bf",
            "id": "rtb-09ea63c2ba2d0f9bf",
            "owner_id": "733573665725",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-019a5066321b9dba8",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "forgejo-private-rt-1",
              "Owner": "Bohdan"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "forgejo-private-rt-1",
              "Owner": "Bohdan"
            },
            "timeouts": null,
            "vpc_id": "vpc-050ba97cb322a7a93"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:733573665725:route-table/rtb-08104651d0d8e3f1c",
            "id": "rtb-08104651d0d8e3f1c",
            "owner_id": "733573665725",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0bf5717224ce7042a",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "forgejo-private-rt-2",
              "Owner": "Bohdan"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "forgejo-private-rt-2",
              "Owner": "Bohdan"
            },
            "timeouts": null,
            "vpc_id": "vpc-050ba97cb322a7a93"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:733573665725:route-table/rtb-05bbfd224f46bef2a",
            "id": "rtb-05bbfd224f46bef2a",
            "owner_id": "733573665725",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0d2255728cfe15ff8",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "forgejo-private-rt-3",
              "Owner": "Bohdan"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "forgejo-private-rt-3",
              "Owner": "Bohdan"
            },
            "timeouts": null,
            "vpc_id": "vpc-050ba97cb322a7a93"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:733573665725:route-table/rtb-057f4d61d976d4d7c",
            "id": "rtb-057f4d61d976d4d7c",
            "owner_id": "733573665725",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0854a738f97328761",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "forgejo-public-rt",
              "Owner": "Bohdan"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "forgejo-public-rt",
              "Owner": "Bohdan"
            },
            "timeouts": null,
            "vpc_id": "vpc-050ba97cb322a7a93"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b429f2087c19d488",
            "route_table_id": "rtb-09ea63c2ba2d0f9bf",
            "subnet_id": "subnet-0aa48afaff3123c2b"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ed0517d8445c4b96",
            "route_table_id": "rtb-08104651d0d8e3f1c",
            "subnet_id": "subnet-042220d7e1c9fa091"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-012cdfbe331a431ef",
            "route_table_id": "rtb-05bbfd224f46bef2a",
            "subnet_id": "subnet-0ce3bc7c5c8fc9054"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01f805249df836074",
            "route_table_id": "rtb-057f4d61d976d4d7c",
            "subnet_id": "subnet-00a51bf50c2d8209c"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e95844b3a08d1d38",
            "route_table_id": "rtb-057f4d61d976d4d7c",
            "subnet_id": "subnet-0268efab20cead0b4"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00eadd65c32dfcb01",
            "route_table_id": "rtb-057f4d61d976d4d7c",
            "subnet_id": "subnet-02370a736fbb592d6"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:733573665725:subnet/subnet-0aa48afaff3123c2b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0aa48afaff3123c2b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "733573665725",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "forgejo-private-1",
              "Owner": "Bohdan"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "forgejo-private-1",
              "Owner": "Bohdan"
            },
            "vpc_id": "vpc-050ba97cb322a7a93"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:733573665725:subnet/subnet-042220d7e1c9fa091",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-042220d7e1c9fa091",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "733573665725",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "forgejo-private-2",
              "Owner": "Bohdan"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "forgejo-private-2",
              "Owner": "Bohdan"
            },
            "vpc_id": "vpc-050ba97cb322a7a93"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:733573665725:subnet/subnet-0ce3bc7c5c8fc9054",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1c",
            "availability_zone_id": "euc1-az1",
            "cidr_block": "10.0.103.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ce3bc7c5c8fc9054",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "733573665725",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "forgejo-private-3",
              "Owner": "Bohdan"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "forgejo-private-3",
              "Owner": "Bohdan"
            },
            "vpc_id": "vpc-050ba97cb322a7a93"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:733573665725:subnet/subnet-00a51bf50c2d8209c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00a51bf50c2d8209c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "733573665725",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "forgejo-public-1",
              "Owner": "Bohdan"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "forgejo-public-1",
              "Owner": "Bohdan"
            },
            "vpc_id": "vpc-050ba97cb322a7a93"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:733573665725:subnet/subnet-0268efab20cead0b4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0268efab20cead0b4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "733573665725",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "forgejo-public-2",
              "Owner": "Bohdan"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "forgejo-public-2",
              "Owner": "Bohdan"
            },
            "vpc_id": "vpc-050ba97cb322a7a93"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:733573665725:subnet/subnet-02370a736fbb592d6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1c",
            "availability_zone_id": "euc1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02370a736fbb592d6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "733573665725",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "forgejo-public-3",
              "Owner": "Bohdan"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "forgejo-public-3",
              "Owner": "Bohdan"
            },
            "vpc_id": "vpc-050ba97cb322a7a93"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:733573665725:vpc/vpc-050ba97cb322a7a93",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0d17432f6c5f42b27",
            "default_route_table_id": "rtb-01866107056355e18",
            "default_security_group_id": "sg-01472627438e1d5dc",
            "dhcp_options_id": "dopt-08f475807bea41904",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-050ba97cb322a7a93",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-01866107056355e18",
            "owner_id": "733573665725",
            "tags": {
              "Environment": "dev",
              "Name": "forgejo-vpc",
              "Owner": "Bohdan"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "forgejo-vpc",
              "Owner": "Bohdan"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}